# nanos-secure-sdk

./: .clang-format  .codespellrc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.app_params  Makefile.common_app  Makefile.conf.cx  Makefile.defines  Makefile.glyphs  Makefile.rules  Makefile.rules_generic  Makefile.standard_app  Makefile.target  README.md  callgen.py  create_manifest.py  extract_param.py  icon.py  icon3.py  install_params.py  script.ld  script.ux.ld
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_all_apps.yml  check_clang_static_analyzer.yml  pre-commit.yml  unit_tests.yml
common_app/: format.h  io.c  io.h  macros.h  main.c
doc/: Doxyfile  mainpage.dox
fuzzing/: CMakeLists.txt  README.md  fuzzer_apdu_parser.c  fuzzer_base58.c  fuzzer_bip32.c  fuzzer_qrcodegen.c
fuzzing/mock/: os_io.h  os_task.c  os_task.h
include/: appflags.h  arch.h  bagl.h  bolos_target.h  bolos_version.h  checks.h  core_cm0.h  core_cm0plus.h  core_cmFunc.h  core_cmInstr.h  core_sc000.h  cx.h  cx_compliance_141.h  cx_errors.h  cx_stubs.h  cx_trampoline.h  decorators.h  errors.h  exceptions.h  lcx_aes.h  lcx_blake2.h  lcx_common.h  lcx_crc.h  lcx_des.h  lcx_ecdh.h  lcx_ecdsa.h  lcx_ecfp.h  lcx_ecschnorr.h  lcx_eddsa.h  lcx_groestl.h  lcx_hash.h  lcx_hmac.h  lcx_math.h  lcx_pbkdf2.h  lcx_ripemd160.h  lcx_rng.h  lcx_rsa.h  lcx_sha256.h  lcx_sha3.h  lcx_sha512.h  (+51 more)
lib_bagl/include/: bagl.h  bagl_animate.h  bagl_font_comic_sans_ms_20px.inc  bagl_font_lucida_console_8.inc  bagl_font_open_sans_bold_13px.inc  bagl_font_open_sans_bold_21px.inc  bagl_font_open_sans_extrabold_11px.inc  bagl_font_open_sans_extrabold_11px.json  bagl_font_open_sans_extrabold_11px_unicode.inc  bagl_font_open_sans_extrabold_11px_unicode.json  bagl_font_open_sans_light_13.inc  bagl_font_open_sans_light_14px.inc  bagl_font_open_sans_light_16px.inc  bagl_font_open_sans_light_16px.json  bagl_font_open_sans_light_16px_unicode.json  bagl_font_open_sans_light_32.inc  bagl_font_open_sans_regular_11px.inc  bagl_font_open_sans_regular_11px.json  bagl_font_open_sans_regular_11px_unicode.inc  bagl_font_rom_struct.inc
lib_bagl/src/: bagl.c  bagl_animate.c  bagl_font_comic_sans_ms_20px.inc  bagl_font_lucida_console_15.inc  bagl_font_lucida_console_8.inc  bagl_font_open_sans_bold_13px.inc  bagl_font_open_sans_bold_21px.inc  bagl_font_open_sans_extrabold_11px.inc  bagl_font_open_sans_extrabold_11px_unicode.inc  bagl_font_open_sans_extrabold_11px_unicode.json  bagl_font_open_sans_light_13.inc  bagl_font_open_sans_light_13px.inc  bagl_font_open_sans_light_14px.inc  bagl_font_open_sans_light_16_22px.inc  bagl_font_open_sans_light_16px.inc  bagl_font_open_sans_light_16px_unicode.inc  bagl_font_open_sans_light_16px_unicode.json  bagl_font_open_sans_light_20.inc  bagl_font_open_sans_light_21px.inc  bagl_font_open_sans_light_23_30px.inc  bagl_font_open_sans_light_32.inc  bagl_font_open_sans_regular_10_13px.inc  bagl_font_open_sans_regular_11_14px.inc  bagl_font_open_sans_regular_11px.inc  bagl_font_open_sans_regular_11px_unicode.inc  bagl_font_open_sans_regular_11px_unicode.json  bagl_font_open_sans_regular_13_18px.inc  bagl_font_open_sans_regular_22_30px.inc  bagl_font_open_sans_regular_8_11px.inc  bagl_font_open_sans_semibold_10_13px.inc  bagl_font_open_sans_semibold_11_16px.inc  bagl_font_open_sans_semibold_13_18px.inc  bagl_font_open_sans_semibold_13px.inc  bagl_fonts.c  (+7 more)
lib_blewbxx/: ble.h  ble_common.h
lib_blewbxx_impl/: stm32_wpan_common.h
lib_bluenrg/: bluenrg_interface.c  bluenrg_interface.h  connection_config.h  osal.c
lib_bluenrg_impl/: ledger_ble.c
lib_cxng/: README.md  cx.export
lib_nbgl/: README.md
lib_standard_app/: base58.c  base58.h  bip32.c  bip32.h  buffer.c  buffer.h  crypto_helpers.c  crypto_helpers.h  debug.c  debug.h  format.c  format.h  io.c  io.h  macros.h  main.c  offsets.h  parser.c  parser.h  read.c  read.h  swap.h  swap_entrypoints.h  swap_lib_calls.h  swap_utils.c  swap_utils.h  varint.c  varint.h  write.c  write.h
lib_stusb/: usbd_conf.c  usbd_conf.h
lib_stusb_impl/: u2f_impl.c  u2f_impl.h  u2f_io.c  usbd_ccid_impl.c  usbd_ccid_impl.h  usbd_hid_impl.c  usbd_hid_impl.h  usbd_impl.c  usbd_impl.h
lib_stusb_impl_kbd/: u2f_impl.c  u2f_io.c  usbd_ccid_impl.h  usbd_hid_impl.h  usbd_impl.c
lib_ux_fatstacks/: ux.c  ux.h  ux_loc.h
lib_ux_nbgl/: ux.c  ux.h
lib_ux_stax/: ux.c  ux.h  ux_loc.h
pycparser/: __init__.py  c_ast.py  c_lexer.py  c_parser.py
src/: app_metadata.c  bagl.c  bagl_font_comic_sans_ms_20px.inc  bagl_font_lucida_console_15.inc  bagl_font_lucida_console_8.inc  bagl_font_open_sans_bold_13px.inc  bagl_font_open_sans_bold_21px.inc  bagl_font_open_sans_extrabold_11px.inc  bagl_font_open_sans_light_13.inc  bagl_font_open_sans_light_13px.inc  bagl_font_open_sans_light_14px.inc  bagl_font_open_sans_light_16_22px.inc  bagl_font_open_sans_light_16px.inc  bagl_font_open_sans_light_20.inc  bagl_font_open_sans_light_21px.inc  bagl_font_open_sans_light_23_30px.inc  bagl_font_open_sans_light_32.inc  bagl_font_open_sans_regular_10_13px.inc  bagl_font_open_sans_regular_11_14px.inc  bagl_font_open_sans_regular_11px.inc  bagl_font_open_sans_regular_13_18px.inc  bagl_font_open_sans_regular_22_30px.inc  bagl_font_open_sans_regular_8_11px.inc  bagl_font_open_sans_semibold_10_13px.inc  bagl_font_open_sans_semibold_11_16px.inc  bagl_font_open_sans_semibold_13_18px.inc  bagl_font_open_sans_semibold_13px.inc  bagl_font_open_sans_semibold_18px.inc  bagl_font_open_sans_semibold_8_11px.inc  bagl_font_rom.inc  bagl_font_rom_struct.inc  bagl_font_symbols.inc  bagl_fonts.c  checks.c  cx.c  cx_compliance_141.c  cx_hash_iovec.c  cx_stubs.S  cx_wrappers.c  ledger_assert.c  (+14 more)
tools/: rle_custom.py  ttf2inc.py
unit-tests/lib_nbgl/: CMakeLists.txt  README.md  glyphs.h  nbgl_stubs.c  test_nbgl_fonts.c  test_nbgl_obj.c  test_nbgl_obj_pool.c  test_nbgl_screen.c
unit-tests/lib_standard_app/: CMakeLists.txt  README.md  test_apdu_parser.c  test_base58.c  test_bip32.c  test_buffer.c  test_format.c  test_write.c
(+462 files in other folders)
